# py-rocrail

./: .gitignore  CLAUDE.md  EMERGENCY_DISCONNECT.md  GAP_ANALYSIS.md  MCP_PLAN.md  OBJECTS.md  PCAP_TESTING_GUIDE.md  README.md  TESTING_STRATEGY.md  TRIGGERS.md  VERIFIED_COMMANDS_IMPLEMENTED.md  def.txt  example_mock_model.py  example_usage.py  expanded_test.py  pyproject.toml  test.py  test_all_pcaps.py  test_automode_multi.py  test_block_close.py  test_car_operator.py  test_exception_handling.py  test_feedback_sensors.py  test_mock_communicator.py  test_model_queries.py  test_pcap_state_updates.py  test_schedule.py  test_stage.py  test_system_commands.py  test_trigger.py  test_trigger_callbacks.py  test_trigger_execution.py  test_trigger_improved.py
.claude/: settings.local.json
.github/workflows/: pylint.yml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  test-server.bat  test-server.sh
example_plan/: occ.xml  plan.xml  rocrail.ini
examples/: 01_simple_connection.py  02_automode_control.py  03_time_triggers.py  04_event_triggers.py  05_emergency_disconnect.py  README.md  basic_usage.py
mcp-pyrocrail/: README.md  pyproject.toml  run_server.bat  run_server.sh
mcp-pyrocrail/src/mcp_pyrocrail/: __init__.py  server.py
mcp-pyrocrail/src/mcp_pyrocrail/parsers/: __init__.py  objects_md_parser.py
mcp-pyrocrail/src/mcp_pyrocrail/tools/: __init__.py  docs_lookup.py
mcp-pyrocrail/tests/: test_docs_lookup.py
src/pyrocrail/: __init__.py  communicator.py  model.py  pyrocrail.py
tests/: README.md
tests/integration/: __init__.py  test_automode_multi.py  test_docker_rocrail.py
tests/manual/: test_block_state_issue.py  test_gotoblock.py  test_rocrail_shutdown.py
tests/tools/: README.md  mock_communicator.py  pcap_parser.py  pcap_replay_test.py  pcap_stats.py
tests/unit/: test_all_pcaps.py  test_car_operator.py  test_exception_handling.py  test_exception_levels.py  test_helper_functions.py  test_locomotive_function.py  test_mock_communicator.py  test_model_queries.py  (+8 more)
(+26 files in other folders)
